$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-01-05 [C] Removed class 'image' from spacer {eenemeenemuu}
2010-01-05 [B] Fixed template error with certain settings for comments and smileys (thread ID 62835) {eenemeenemuu}
2010-01-05 [B] Fixed display of rating stars after vote {eenemeenemuu}
2010-01-04 [D] Minor improvements of docs {GauGau}
2010-01-02 [M] Updated header information to reflect new year {GauGau}
2009-12-30 [B] Added missing anchor attributes to themes which override the menus {Nibbler}
2009-12-29 [D] Undid the syntax highlighting changes from 2009-01-02 and added a section in the coding guidelines page about it {GauGau}
2009-12-29 [D] Added usability section to coding guidelines {GauGau}
2009-12-27 [M] Counted version number up for onlinestats from 2.3 to 2.4 {GauGau}
2009-12-27 [C] Silenced notice in onlinestats {GauGau}
2009-12-27 [B] Added missing config page for onlinestats {GauGau}
2009-12-26 [D] Updated navigation of German docs {GauGau}
2009-12-25 [D] Added detailed explanations about permissions on folder level {GauGau}
2009-12-25 [O] Removed unneeded language string {GauGau}
2009-12-25 [C] Added coppermine style classes to installer {GauGau}
2009-12-25 [C] Added button icons to installer {GauGau}
2009-12-25 [C] Renamed install_old.php to install_classic.php {GauGau}
2009-12-22 [B] Turned "restore factory defaults" into a hidden option to avoid issues with IE6 (thread ID 62899) {GauGau}
2009-12-22 [D] Added install screen steps for the wizard {GauGau}
2009-12-21 [D] Added details to documentation navigation {GauGau}
2009-12-21 [C] Fixed some minor typos in docs {GauGau}