@@ -449,7 +449,7 @@ function coffee_maker_uninstall() {
 To refer to that file, refer to <tt class="code">index.php?file=coffee_maker/foobar</tt>, i.e. to <tt class="code">http://example.com/your_coppermine_folder/index.php?file=coffee_maker/foobar</tt> or (even shorter) to <tt class="code">http://example.com/your_coppermine_folder/?file=coffee_maker/foobar</tt>
 </div>
 <p>With this being said, it's obvious that you don't have to move files into the coppermine root folder - you can refer to files that reside in your plugin's sub-folder as if it resided in coppermine's root folder that way.</p>
-<p class="cpg_message_info">You (as a coppermine plugin author) <strong>mustn't</strong> create plugins that require end users to move files around before they can start using your plugin. It's simply not necessary to create plugins that way, as you can savely do as if files resides in coppermine's root folder by using the technique used in this section.</p>
+<p class="cpg_message_error">You (as a coppermine plugin author) <strong>mustn't</strong> create plugins that require end users to move files around before they can start using your plugin. It's simply not necessary to create plugins that way, as you can savely do as if files resides in coppermine's root folder by using the technique used in this section.</p>
 
 
 <p><a class="back" href="#top">Back to top</a></p><hr />
