@@ -73,7 +73,8 @@
   Your plugin needs a meaningfull, simple name. Make sure that a plugin doesn't already exist with the same name you've chosen. Then create a sub-folder within the plugin folder and name it as you see fit. Make sure to use web-safe names (only alphanumerals, all lower-case, no special chars except underscore.<br />
   For clarification: there can be only alphanumerals in a plugin's folder name. There mustn't be any dots or other special chars in it. The only exception is the underscore (_)
   <div class="cpg_example"><tt class="code">your_coppermine_folder/plugins/coffee_maker/</tt></div>
-  Coming up with a folder name sounds easy, and you may be tempted to just use the name <tt class="code">my_plugin</tt> or <tt class="code">foobar</tt> to be able to start coding right away. However, you have to keep in mind that while you progress writing your plugin, the folder name will appear hard-coded into your plugin (possibly many times), so it will be hard to change it later. That's why it's advisable to come up with a good folder name in the first place: it should be descriptive, consist of two or three words and mean something initially. A folder named &quot;<tt class="code">coppermine_candy</tt>&quot; wouldn't mean much - the word "coppermine" would make no point, as the plugin already resides within coppermine, and the word "candy" would no describe what your plugin does. Better, self-explanatory names for plugins would be "rename_users", "thumbnail_dropshadow" or "backup_files". For details on a good name for your folder, please read up the section &quot;<a href="#plugin_writing_naming_conventions">Naming conventions</a>&quot;.</li>
+  Coming up with a folder name sounds easy, and you may be tempted to just use the name <tt class="code">my_plugin</tt> or <tt class="code">foobar</tt> to be able to start coding right away. However, you have to keep in mind that while you progress writing your plugin, the folder name will appear hard-coded into your plugin (possibly many times), so it will be hard to change it later. That's why it's advisable to come up with a good folder name in the first place: it should be descriptive, consist of two or three words and mean something initially. A folder named &quot;<tt class="code">coppermine_candy</tt>&quot; wouldn't mean much - the word "coppermine" would make no point, as the plugin already resides within coppermine, and the word "candy" would no describe what your plugin does. Better, self-explanatory names for plugins would be "rename_users", "thumbnail_dropshadow" or "backup_files". If someone else already has created a plugin that will do something similar to your plugin, make sure to use a name that differs from the other plugin. The second part of your plugin's name could be your nickname or real name as well - something like "slideshow_nick" as a plugin short name would be OK. It's not a bright idea to try to "cheat" by naming your plugin "aaaaaaa" in an attempt to make it stand out in the plugin list (the plugin list is sorted alphabetically) - the staff on coppermine-gallery.net will rename such plugins. Also please don't use abbreviations that don't mean anything - names like "dffds" for "damn fast flash-driven slideshow" are not easy to memorize - instead you should use something like "slideshow_flash"; if a user looks at the list of plugins on his gallery using his FTP application (during upload), it should be obious what plugin each sub-folder corresponds to. <br />
+  For details on a good name for your folder, please read up the sections &quot;<a href="#plugin_writing_naming_conventions">Naming conventions</a>&quot; and &quot;<a href="dev_plugin_api.htm#plugin_api_">Distributing Your Plugin</a>&quot; as well.</li>
   <li>
   <a name="plugin_writing_preparation_translation"></a><h3>Consider translations<a href="#plugin_writing_preparation_translation" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
   Coppermine is an international project, with users from all over the world. If you should decide to contribute your custom plugin later, it would be a good idea to design it properly in the first place: keep all strings that could need translation in a separate include file and only hard-code the corresponding vars into your code.
@@ -84,7 +85,7 @@
   </li>
   <li>
   <a name="plugin_writing_preparation_db"></a><h3>Database changes<a href="#plugin_writing_preparation_db" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
-  If your plugin needs to write to the database or even changes the structure of tables, it's almost mandatory to come up with a routine to write the needed database changes during install of the plugin. It's a good idea as well to come up with a method to undo the database changes if the user should later decide to disable/uninstall your plugin. If this is the case, you should preferably come up with a database setup screen as well.
+  If your plugin needs to write to the database or even changes the structure of tables, it's almost mandatory to come up with a routine to write the needed database changes during install of the plugin. It's a good idea as well to come up with a method to undo the database changes if the user should later decide to disable/uninstall your plugin. If this is the case, you should preferably come up with a database setup screen as well (see &quot;<a href="#plugin_writing_database">Database access</a>&quot;).
   </li>
   <li>
   <a name="plugin_writing_preparation_support"></a><h3>Support issues<a href="#plugin_writing_preparation_support" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
@@ -214,6 +215,92 @@ You will also have to include the following line to make sure you can use these 
 $superCage = Inspekt::makeSuperCage(); 
 </div><br />
 Double check this if you're getting a 500 error.
+
+<a name="plugin_writing_database"></a><h2>Database access<a href="#plugin_writing_database" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
+A plugin can access the database in the same manner that core code is accessing the database. However, there are some things to keep in mind for plugin authors:
+
+<a name="plugin_writing_database_direct_queries"></a><h3>Direct queries<a href="#plugin_writing_database_direct_queries" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+Don't use the native PHP commands (like <a href="http://www.php.net/manual/en/function.mysql-query.php" rel="external" class="phpnet">mysql_query</a>) to perform queries against the coppermine database tables. Instead, use the function <tt class="code">cpg_db_query</tt> built into coppermine. You don't need to explicitely open the connection - it is already established for you when using the plugin API.
+<div class="cpg_example">
+	<table border="0" cellspacing="0" cellpadding="0" width="100%" class="maintable">
+		<tr>
+			<td class="tableb">Bad example</td>
+			<td class="tableb cpg_message_validation code">$result = mysql_query("SELECT * WHERE 1=1");</td>
+		</tr>
+		<tr>
+			<td class="tableb tableb_alternate">Good example</td>
+			<td class="tableb cpg_message_success code">$result = cpg_db_query("SELECT * WHERE 1=1");</td>
+		</tr>
+	</table>
+</div>
+
+<a name="plugin_writing_database_tables_access"></a><h3>Accessing database tables<a href="#plugin_writing_database_tables_access" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+Don't hard-code table names into your custom queries, as your queries are bound to break if users have chosen another table prefix than the default one.<br />
+Instead, coppermine defines a variable <tt class="code">$CONFIG['TABLE_PREFIX']</tt> that contains the table prefix that you can (and should) use if you need to access a table within coppermine's database and using the prefix: use the prefix for custom tables for your plugin.
+<div class="cpg_example">
+	<table border="0" cellspacing="0" cellpadding="0" width="100%" class="maintable">
+		<tr>
+			<td class="tableb">Bad example</td>
+			<td class="tableb cpg_message_validation code">$result = cpg_db_query("SELECT * FROM cpg15x_plugin_example WHERE 1=1");</td>
+		</tr>
+		<tr>
+			<td class="tableb tableb_alternate">Good example</td>
+			<td class="tableb cpg_message_success code">$result = cpg_db_query("SELECT * FROM {$CONFIG['TABLE_PREFIX']}plugin_example WHERE 1=1");</td>
+		</tr>
+	</table>
+</div>
+If you want to access an existing table (like the coppermine table that contains all categories), use the variables outlined in <a href="dev_database.htm#db_reference within_code">Database reference within coppermine code</a>.
+<div class="cpg_example">
+	<table border="0" cellspacing="0" cellpadding="0" width="100%" class="maintable">
+		<tr>
+			<td class="tableb">Bad example</td>
+			<td class="tableb cpg_message_validation code">$result = cpg_db_query("SELECT * FROM {$CONFIG['TABLE_PREFIX']}categories WHERE 1=1");</td>
+		</tr>
+		<tr>
+			<td class="tableb tableb_alternate">Good example</td>
+			<td class="tableb cpg_message_success code">$result = cpg_db_query("SELECT * FROM $CONFIG['TABLE_CATEGORIES'] WHERE 1=1");</td>
+		</tr>
+	</table>
+</div>
+
+<a name="plugin_writing_database_tables_create"></a><h3>Creating database tables<a href="#plugin_writing_database_tables_create" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+If you need to expand the database schema of coppermine to add a table for your plugin, you should follow the following rules:
+<ul>
+	<li>Create your table within the same database that coppermine resides in</li>
+	<li>Respect the naming scheme by prefixing your table name with the table prefix that the user has chosen during install (stored in <tt class="code">$CONFIG['TABLE_PREFIX']</tt>), followed by the word "plugin" with an underscore, followed by the short name of your plugin (the &quot;<a href="#plugin_writing_naming_conventions_folders">folder name of your plugin</a>&quot;)
+	<div class="cpg_example">If your plugin folder name was "coffee_maker", your plugin's table name would be <tt class="code">$CONFIG['TABLE_PREFIX']</tt> . '_plugin_coffee_maker'
+	</div>
+	</li>
+	<li>During your plugin's install function, make sure that your table creation progress doesn't break if a user hasn't removed your plugin previously - it's recommended to use <tt class="code">CREATE TABLE IF NOT EXISTS</tt> instead of just using <tt class="code">CREATE TABLE</tt></li>
+	<li>Don't consume more resources than you need - define the types and dimensions of your plugin fields wisely</li>
+</ul>
+This could be an example for a database table creation query inside your plugin's install function:
+<pre class="cpg_code code">$query = <<< EOT
+	CREATE TABLE IF NOT EXISTS `{$CONFIG['TABLE_PREFIX']}plugin_coffee_maker` (
+	  `cid` mediumint(10) NOT NULL default '0',
+	  `some_field` smallint(6) NOT NULL default '0'
+	) TYPE=MyISAM COMMENT='Your clever description of the table here';
+EOT;
+$result = cpg_db_query($query);	</pre>
+
+
+<a name="plugin_writing_database_tables_delete"></a><h3>Deleting database tables<a href="#plugin_writing_database_tables_delete" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+It's important that your plugin removes all tables it created during install when the end user uninstalls it. In some rare cases it might make sense to keep the database tables if the user decides to install it later again (if the re-population of the database table records would be time-consuming or complicated). If that's the case for your plugin, you should add a form to the uninstall process of your plugin that asks the end user if the database table should be kept or not. Out of the box, the database tables that were created during install need to be deleted when the plugin is uninstalled.<br />
+It's safer to use <tt class="code">DROP TABLE IF EXISTS</tt> instead of just using <tt class="code">DROP TABLE</tt>.
+To get rid of the table created in the example above, run a query like
+<pre class="cpg_code code">cpg_db_query("DROP TABLE IF EXISTS {$CONFIG['TABLE_PREFIX']}plugin_coffee_maker");</pre>in the uninstall function of your plugin.
+
+<a name="plugin_writing_database_config"></a><h3>Storing your plugin's config values<a href="#plugin_writing_database_config" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+If you need just a few database records to store your plugin's config settings, you don't have to create a separate table just for those few plugin config records - instead, you're encouraged to use the existing config table where coppermine stores it's core settings in as well. There are some great benefits in using the existing config table: the main benefit is that you don't have to run a query to get your setting's values - coppermine's core code will populate the <tt class="code">$CONFIG</tt>-array insteadd accordingly.<br />
+It's important though that it get's obvious what your config records are being used for and from which plugin they come from. That's why there is a strict naming schema for new records in coppermine's config that a plugin should adhere to: prefix the record with the word "plugin" followed by an underscore followed by your plugin's short name followed by an underscore followed by the actual config setting name.<br />
+To make sure that your script doesn't break if such a setting already exists (e.g. if the user re-installs your plugin that hasn't been uninstalled properly before) it's advisable to use <tt class="code">INSERT IGNORE</tt> instead of using an ordinary <tt class="code">INSERT</tt>.
+<div class="cpg_example">
+	If your plugin's short name is "coffee_maker" and you need to store a setting for the height of the coffee mug with the default value of 20, the corresponding setting record could be named <tt class="code">plugin_coffee_maker_mug_height</tt><br />
+	The query in the install section of your plugin could be something like
+	<pre clas="cpg_code">cpg_db_query("INSERT IGNORE INTO {$CONFIG['TABLE_CONFIG']} ( `name` , `value` ) VALUES ('plugin_coffee_maker_mug_height', '20')");</pre>and the corresponding line inside the uninstall section would be<pre clas="cpg_code">cpg_db_query("DELETE FROM {$CONFIG['TABLE_CONFIG']} WHERE name = 'plugin_coffee_maker_mug_height'");</pre>
+	The resulting element inside the <tt class="code">$CONFIG</tt> array would be <tt class="code">$CONFIG['plugin_coffee_maker_mug_height']</tt>
+</div>
+
 
 <a name="plugin_writing_types"></a><h2>Plugin Types<a href="#plugin_writing_types" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
 Plugins (or rather individual pages of a plugin) can roughly fall into two categories: they can reside on a page of their own (a good example would be the plugin config screen some plugins come with or a plugin that adds a contact form) or they can reside within each or some coppermine-driven pages, modifying the output or functionality of the pages they reside on (a good example would be plugins that add menu items).<br />
