@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-01-07 [D] Added database section to plugin documentation {eenemeenemuu}
 2010-01-05 [C] Removed class 'image' from spacer {eenemeenemuu}
 2010-01-05 [B] Fixed template error with certain settings for comments and smileys (thread ID 62835) {eenemeenemuu}
 2010-01-05 [B] Fixed display of rating stars after vote {eenemeenemuu}
